# getting_to_philosophy

./: .env  Cargo.toml
migrations/2021-09-08-221811_results/: up.sql
src/: app.rs  main.rs
src/db/: mod.rs  models.rs  schema.rs
src/path/: mod.rs
src/routes/: api.rs  mod.rs
