[package]
name = "getting_to_philosophy"
version = "0.1.0"
authors = ["Charlie Thomson <charliecthomson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking"]}
soup = "0.5.1"
urlencoding = "2.1.0"
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
actix-web = { version = '3.0.2' }
serde = { version = '1.0', features = ['derive'] }
uuid = { version = "0.8.2", features = ['v4']}